--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dnd": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-intersection-observer": "^9.13.0",
     "react-resizable-panels": "^2.0.19",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
